--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 .navbar a {
     font-family: "Nunito", sans-serif;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 700;
     font-style: normal;
     color: #333;
 }
@@ -118,11 +118,24 @@
 /* Estilo do Contato */
 
 #content-contato {
-
     margin-top: 30px;
     padding-top: 5rem;
     padding-bottom: 5rem;
+}
 
+#content-contato h2 {
+    font-family: "Nunito", sans-serif;
+    font-size: 2rem;
+    font-weight: 800;
+}
+
+#content-contato label {
+    font-family: "Nunito", sans-serif;
+    font-weight: 800;
+}
+
+#content-contato button {
+    font-family: "Nunito", sans-serif;
 }
 
 /* Estilo do Footer */
