--- a/css/style.css
+++ b/css/style.css
@@ -41,10 +41,25 @@
     height: 100%;
     object-fit: cover;
     margin: 0 auto;
+    animation: zoomInOut 10s ease infinite;
 }
 
 .carousel {
     padding-top: 4.95rem;
+}
+
+@keyframes zoomInOut {
+    0% {
+        transform: scale(1.05);
+    }
+
+    50% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(1.05);
+    }
 }
 
 /* Estilo da página Sobre */
@@ -119,8 +134,8 @@
 
 #content-contato {
     margin-top: 30px;
-    padding-top: 5rem;
-    padding-bottom: 5rem;
+    padding-top: 7rem;
+    padding-bottom: 8rem;
 }
 
 #content-contato h2 {
@@ -138,6 +153,57 @@
     font-family: "Nunito", sans-serif;
 }
 
+/* Estilo do Localização */
+
+#content-localizacao {
+    background: #00b59e;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 9rem;
+    padding-bottom: 8rem;
+}
+
+.left-column-loc {
+    font-family: "Nunito", sans-serif;
+    margin-right: 20px;
+    width: 30%;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.left-column-loc h2 {
+    font-size: 3.2em;
+    font-weight: 800;
+    color: #ffffff;
+    margin-bottom: 2rem;
+}
+
+.phrase {
+    font-size: 1.6em;
+    font-weight: 600;
+    color: #ffffff;
+    text-align: justify;
+    margin-bottom: 2rem;
+}
+
+.address,
+.contact,
+.functioning {
+    font-size: 16px;
+    font-weight: 700;
+    color: #ffffff;
+    text-align: justify;
+}
+
+.rigth-column-loc {
+    margin-left: 3%;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
 /* Estilo do Footer */
 
 footer {
@@ -145,6 +211,7 @@ footer {
     color: #333;
     padding: 20px 0;
     font-size: 14px;
+    border-top: solid 1px #e0e0e0;
 }
 
 footer p {
@@ -152,28 +219,44 @@ footer p {
 }
 
 @media (max-width: 1400px) {
+
+    /*SOBRE*/
     #content-sobre {
         padding-top: 8rem;
 
     }
 
     .left-column h2 {
-        font-weight: 800;
         font-size: 2.8em;
     }
 
     .left-column p {
         font-size: 1.5em;
-        font-weight: 600;
     }
 
     .rigth-column img {
         width: 90%;
         margin-left: 6%;
     }
+
+    /*LOCALIZAÇÃO*/
+    .left-column-loc h2 {
+        font-size: 3em;
+    }
+
+    .phrase {
+        font-size: 1.5em;
+    }
+
+    .rigth-column-loc iframe {
+        width: 550px;
+        height: 450px;
+    }
 }
 
 @media (max-width: 1200px) {
+
+    /*SOBRE*/
     #content-sobre {
         display: flex;
         flex-direction: column;
@@ -192,9 +275,30 @@ footer p {
         margin: 0;
     }
 
+    /*LOCALIZAÇÃO*/
+    #content-localizacao {
+        display: flex;
+        flex-direction: column;
+        padding-top: 7rem;
+        margin-bottom: 0;
+    }
+
+    .left-column-loc {
+        margin-right: 0;
+        width: 70%;
+        margin-bottom: 2rem;
+        text-align: center;
+    }
+
+    .rigth-column-loc iframe {
+        width: 600px;
+        height: 450px;
+    }
 }
 
 @media (max-width: 900px) {
+
+    /*SOBRE*/
     .rigth-column img {
         width: 80%;
 
@@ -206,18 +310,33 @@ footer p {
     }
 
     .left-column h2 {
-        font-weight: 800;
         font-size: 2.5em;
     }
 
     .left-column p {
         font-size: 1.4em;
-        font-weight: 600;
+    }
+
+    /*LOCALIZAÇÃO*/
+
+    .rigth-column-loc iframe {
+        width: 550px;
+        height: 450px;
+    }
+
+    .left-column-loc h2 {
+        font-size: 2.7em;
+    }
+
+    .phrase {
+        font-size: 1.4em;
     }
 
 }
 
 @media (max-width: 740px) {
+
+    /*SOBRE*/
     .left-column {
         width: 90%;
 
@@ -227,14 +346,24 @@ footer p {
         width: 70%;
 
     }
+
+    /*LOCALIZAÇÃO*/
+
+    .left-column-loc {
+        width: 80%;
+    }
+
+    .rigth-column-loc iframe {
+        width: 400px;
+        height: 350px;
+    }
 }
 
 @media (max-width: 490px) {
+
+    /*SOBRE*/
     #content-sobre {
         padding-top: 6rem;
-    }
-
-    #content-sobre {
         padding-bottom: 6rem;
     }
 
@@ -265,5 +394,36 @@ footer p {
     #content-contato {
         padding-bottom: 3rem;
         margin-top: 0;
+    }
+
+    /*LOCALIZAÇÃO*/
+
+    #content-localizacao {
+        padding-bottom: 5rem;
+    }
+
+    .left-column-loc h2 {
+        font-size: 22px;
+    }
+
+    .phrase {
+        font-size: 20px;
+    }
+
+    .address,
+    .contact,
+    .functioning {
+        font-size: 16px;
+    }
+
+    .rigth-column-loc iframe {
+        width: 280px;
+        height: 250px;
+    }
+
+    .rigth-column-loc {
+        padding-left: 0;
+        padding-right: 0;
+        margin-left: 0;
     }
 }
