--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,31 @@
     font-family: "Nunito", sans-serif;
 }
 
+/* BTN FORMULARIO */
+.loading {
+    pointer-events: none;
+}
+
+.loading .spinner-border {
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    border: 0.2em solid transparent;
+    border-top-color: white;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 /*SEÇÃO LOCALIZAÇÃO*/
 #content-localizacao {
     background: #00b59e;
